<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_factory"
        android:icon="@drawable/factory"
        android:title="@string/bottom_factory"
        android:orderInCategory="1"/>

    <item
        android:id="@+id/bottom_new_job"
        android:icon="@drawable/new_job"
        android:title="@string/bottom_new_job"
        android:orderInCategory="2"/>

    <item
        android:id="@+id/bottom_list_job"
        android:icon="@drawable/list_job"
        android:title="@string/bottom_list_job"
        android:orderInCategory="3"/>

    <item
        android:id="@+id/bottom_utility"
        android:icon="@drawable/utility"
        android:title="@string/bottom_utility"
        android:orderInCategory="4" />

    <item
        android:id="@+id/bottom_settings"
        android:icon="@drawable/settings"
        android:title="@string/bottom_settings"
        android:orderInCategory="5"/>

</menu>