<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.FragmentNewJob">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/new_job_product_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/new_job_product_text"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/new_job_product_list"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_job_product_text" />

        <TextView
            android:id="@+id/new_job_date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="256dp"
            android:text="@string/new_job_date_text"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_job_product_list" />

        <EditText
            android:id="@+id/new_job_date_edit"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="256dp"
            android:gravity="center"
            android:ems="10"
            android:inputType="number"
            android:digits=".0123456789"
            android:maxLength="8"
            android:hint="@string/new_job_date_edit"
            android:imeOptions="actionDone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_job_date_text"
            tools:ignore="TextFields" />

        <TextView
            android:id="@+id/new_job_party_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="256dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/new_job_party_text"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_job_product_list" />

        <EditText
            android:id="@+id/new_job_party_edit"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="256dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:ems="10"
            android:hint="@string/new_job_party_edit"
            android:inputType="number"
            android:digits=".0123456789"
            android:maxLength="8"
            android:imeOptions="actionDone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_job_party_text"
            android:autofillHints=""
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/new_job_codes_to_the_printer_text"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_marginStart="256dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/new_job_codes_to_the_printer_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_job_party_edit" />

        <TextView
            android:id="@+id/new_job_plan_text"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="256dp"
            android:text="@string/new_job_plan_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_job_date_edit" />

        <EditText
            android:id="@+id/new_job_plan_edit"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="256dp"
            android:digits="0123456789"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/new_job_plan_edit"
            android:inputType="number"
            android:imeOptions="actionDone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_job_plan_text" />

        <EditText
            android:id="@+id/new_job_codes_to_the_printer_edit"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="256dp"
            android:layout_marginTop="8dp"
            android:digits="0123456789"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/new_job_codes_to_the_printer_edit"
            android:inputType="number"
            android:imeOptions="actionDone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_job_codes_to_the_printer_text" />

        <Button
            android:id="@+id/new_job_button_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="50dp"
            android:text="@string/new_job_button_create"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/new_job_faq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="32dp"
            android:gravity="center"
            android:text="@string/new_job_faq"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/new_job_button_create"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>